feat: update payment gateway
