# src/controllers/order.controller.ts
@@ -12,7 +12,7 @@ import { FilterQuery } from "mongoose";
 import { getId } from "../utils/id";
 
 export default {
-  async remove(req: IReqUser, res: Response) {
+  async create(req: IReqUser, res: Response) {
     try {
       const userId = req.user?.id;
       const payload = {
@@ -36,10 +36,11 @@ export default {
         ...payload,
         total,
       });
-
-      const result = await OrderModel.create(payload);
-      response.success(res, result, "success to create an order");
+      const order = new OrderModel(payload);
+      await order.save();
+      response.success(res, order, "success to create an order");
     } catch (error) {
+      console.log("failed", error);
       response.error(res, error, "failed to create an order");
     }
   },
@@ -94,6 +95,37 @@ export default {
 
   async findAllByMember(req: IReqUser, res: Response) {
     try {
+      const userId = req.user?.id;
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TypeOrder> = {
+          createdBy: userId,
+        };
+
+        if (filter.search) query.$text = { $search: filter.search };
+
+        return query;
+      };
+
+      const { limit = 10, page = 1, search } = req.query;
+
+      const query = buildQuery({
+        search,
+      });
+
+      const result = await OrderModel.find(query)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
+        .sort({ createdAt: -1 })
+        .lean()
+        .exec();
+      const count = await OrderModel.countDocuments(query);
+
+      response.pagination(
+        res,
+        result,
+        { current: +page, total: count, totalPage: Math.ceil(count / +limit) },
+        "Success find all orders"
+      );
     } catch (error) {
       response.error(res, error, "failed to create an order");
     }
@@ -161,14 +193,88 @@ export default {
   },
   async pending(req: IReqUser, res: Response) {
     try {
+      const { orderId } = req.params;
+
+      const order = await OrderModel.findOne({
+        orderId,
+      });
+
+      if (!order) return response.notfound(res, "order not found");
+
+      if (order.status === OrderStatus.COMPLETED) {
+        return response.error(res, null, "you have been completed this order");
+      }
+
+      if (order.status === OrderStatus.PENDING) {
+        return response.error(
+          res,
+          null,
+          "you have been payment pending this order"
+        );
+      }
+
+      const result = await OrderModel.findOneAndUpdate(
+        { orderId },
+        { status: OrderStatus.PENDING },
+        { new: true }
+      );
+
+      response.success(res, result, "success to pending an order");
     } catch (error) {
       response.error(res, error, "failed to pending an order");
     }
   },
   async cancelled(req: IReqUser, res: Response) {
     try {
+      const { orderId } = req.params;
+
+      const order = await OrderModel.findOne({
+        orderId,
+      });
+
+      if (!order) return response.notfound(res, "order not found");
+
+      if (order.status === OrderStatus.COMPLETED) {
+        return response.error(res, null, "you have been completed this order");
+      }
+
+      if (order.status === OrderStatus.CANCELLED) {
+        return response.error(
+          res,
+          null,
+          "you have been payment cancelled this order"
+        );
+      }
+
+      const result = await OrderModel.findOneAndUpdate(
+        { orderId },
+        { status: OrderStatus.CANCELLED },
+        { new: true }
+      );
+
+      response.success(res, result, "success to cancelled an order");
     } catch (error) {
       response.error(res, error, "failed to cancelled an order");
+    }
+  },
+
+  async remove(req: IReqUser, res: Response) {
+    try {
+      const { orderId } = req.params;
+      const result = await OrderModel.findOneAndDelete(
+        { orderId },
+        {
+          new: true,
+        }
+      );
+
+      if (!result) {
+        return response.notfound(res, "order not found");
+      }
+
+      response.success(res, result, "success to remove an order");
+    } catch (error) {
+      response.error(res, error, "failed to remove an order");
     }
   },
 };
